src/test/deca/syntax/invalid/erreur_decl_init_3.deca
// Description:
//    mauvaise déclaration/initialisation
//
// Resultats:
//    Erreur de syntaxe
//    ligne 9 : "mismatched input '<=' expecting {',', ';'}"

{ int y;
float x >= y;}
